[package]
name = "embedded-sensors"
version = "0.1.1"
authors = ["Dimitri Popov <d.popov28@protonmail.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niiyachiru/embedded-sensors"
description = "Sensors in one place, with only one feature away."
keywords = ["ak8963", "bh1750", "mpu9250", "mpu6500", "ublox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ak8963", "bh1750", "mpu925x", "mpu6500", "ublox"]
ak8963 = ["nalgebra"]
bh1750 = []
mpu925x = ["ahrs", "ak8963", "mpu6500"]
mpu6500 = ["nalgebra"]
ublox = ["nmea0183", "embedded-io"]

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"

ahrs = { version = "0.7.0", default-features = false, optional = true }
nalgebra = { version = "0.33.0", default-features = false, optional = true }
nmea0183 = { version = "0.5.0", optional = true }
embedded-io = { version = "0.6.1", optional = true }
